
* Fixed the bug of RubyEnumerable#findIndex while finding the index of a null object 


Version 1.6.3

* Avoided file lock by initiating EachLineIterator lazily


Version 1.7.0

+ Added RubyString

+ Added CharacterSuccessor and extended RubyRange by it

+ Added RubyCollections#isBlank & RubyCollections#isNotBlank

* Corrected the behavior of RubyArray#pack & RubyString#unpack

* Fixed the bug of RubyArray#insert while using negative index

+ Added Serializable to RubyArray, RubyHash, RubyRange & RubyString


Version 1.7.1

* Used bounded wildcards to increased API flexibility


Version 1.7.2

+ Added static factory methods #of, #copyOf to RubyArray and RubyHash

* Deprecated RubyCollections#newRubyArray(List, boolean) and  RubyCollections#newRubyHash(LinkedHashMap, boolean)

- Removed RubyString#chars to solve the API conflict with Java 8 CharSequence


Version 1.7.3

* Fixed RubyString#unpack Directive H,h,B,b bugs

* Modified RubyKernel#p behavior toward primitive arrays

* Changed RubyArray#copyOf(List) to RubyArray#copyOf(Iterable)


Version 1.7.4

* Changed RubyString#unpack to use ASCII-8bit encoding by adding ASCII8BitUTF

* Moved ByteUtil to net.sf.rubycollect4j.util package


Version 1.7.5

* Increased the flexibility of RubyArray API by accepting Collection in certain methods

* Changed Comparable<RubyArray> to Comparable<List> in RubyArray

* Improved the quality of entire JavaDoc

* Deprecated RubyCollections#newRubyString


Version 1.8.0

+ Added Ruby.Enumerable, Ruby.Enumerator and Ruby.LazyEnumerator interfaces

+ Added RubySet

- Removed deprecated methods

- Removed RubyCollections::newRubyRange

+ Expended RubyDate API

+ Added RubyEnumerator::of, RubyEnumerator::copyOf, RubyLazyEnumerator::of & RubyLazyEnumerator::copyOf

* Increased the acceptable number of RubyCollections::rh arguments from 20 to 26 key-value pairs


Version 1.8.1

* Fixed RubyArray#sample bug


Version 1.8.2

+ Added RubyIO::open(File) and RubyIO::open(InputStream) methods